@@ -1,25 +1,31 @@
 package co.rsk.vm.precompiles;
 
-import co.rsk.config.TestSystemProperties;
-import co.rsk.test.World;
-import co.rsk.test.dsl.DslParser;
-import co.rsk.test.dsl.DslProcessorException;
-import co.rsk.test.dsl.WorldDslProcessor;
-import com.typesafe.config.ConfigValueFactory;
+import static org.ethereum.vm.PrecompiledContracts.NO_LIMIT_ON_MAX_INPUT;
+
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.util.List;
+import java.util.stream.Stream;
+
 import org.ethereum.core.CallTransaction;
 import org.ethereum.core.Transaction;
 import org.ethereum.core.TransactionReceipt;
 import org.ethereum.crypto.HashUtil;
+import org.ethereum.crypto.signature.Secp256k1;
 import org.ethereum.vm.LogInfo;
 import org.ethereum.vm.PrecompiledContracts;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import com.typesafe.config.ConfigValueFactory;
+
+import co.rsk.config.TestSystemProperties;
+import co.rsk.pcc.secp256k1.Secp256k1Addition;
+import co.rsk.pcc.secp256k1.Secp256k1Multiplication;
+import co.rsk.test.World;
+import co.rsk.test.dsl.DslParser;
+import co.rsk.test.dsl.DslProcessorException;
+import co.rsk.test.dsl.WorldDslProcessor;
 
 /**
  * After Iris hardfork, when a user wants to call a contract from another contract,
@@ -42,9 +48,9 @@ class PrecompiledContractsCallErrorHandlingTests {
 
     @Test
     void handleErrorOnFailedPrecompiledContractCall_beforeIris() throws IOException, DslProcessorException {
-        TestSystemProperties config = new TestSystemProperties(rawConfig ->
-                rawConfig.withValue("blockchain.config.hardforkActivationHeights.iris300", ConfigValueFactory.fromAnyRef(-1))
-        );
+        TestSystemProperties config = new TestSystemProperties(rawConfig -> rawConfig
+                .withValue("blockchain.config.hardforkActivationHeights.iris300", ConfigValueFactory.fromAnyRef(-1))
+                .withValue("blockchain.config.hardforkActivationHeights.reed800", ConfigValueFactory.fromAnyRef(0)));
 
         DslParser parser = DslParser.fromResource(DSL_PRECOMPILED_CALL_ERROR_HANDLING_TXT);
         world = new World(config);
@@ -69,14 +75,18 @@ class PrecompiledContractsCallErrorHandlingTests {
         assertTransactionOk("tx13", PrecompiledContracts.ALT_BN_128_PAIRING_ADDR_STR);
         assertTransactionOk("tx14", PrecompiledContracts.BLAKE2F_ADDR_STR);
 
+        // EC Secp256k1 precompiles test
+        assertTransactionOk("tx16", PrecompiledContracts.SECP256K1_ADD_ADDR_STR);
+        assertTransactionOk("tx17", PrecompiledContracts.SECP256K1_MUL_ADDR_STR);
+
         assertTransactionCount(world.getBlockByName("b01").getTransactionsList().size());
     }
 
     @Test
     void handleErrorOnFailedPrecompiledContractCall_afterIris() throws IOException, DslProcessorException {
-        TestSystemProperties config = new TestSystemProperties(rawConfig ->
-                rawConfig.withValue("blockchain.config.hardforkActivationHeights.iris300", ConfigValueFactory.fromAnyRef(0))
-        );
+        TestSystemProperties config = new TestSystemProperties(rawConfig -> rawConfig
+                .withValue("blockchain.config.hardforkActivationHeights.iris300", ConfigValueFactory.fromAnyRef(0))
+                .withValue("blockchain.config.hardforkActivationHeights.reed800", ConfigValueFactory.fromAnyRef(0)));
 
         DslParser parser = DslParser.fromResource(DSL_PRECOMPILED_CALL_ERROR_HANDLING_TXT);
         world = new World(config);
@@ -101,7 +111,59 @@ class PrecompiledContractsCallErrorHandlingTests {
         assertTransactionOkWithErrorHandling("tx13", PrecompiledContracts.ALT_BN_128_PAIRING_ADDR_STR);
         assertTransactionOkWithErrorHandling("tx14", PrecompiledContracts.BLAKE2F_ADDR_STR);
 
+        // EC Secp256k1 precompiles test
+        assertTransactionOk("tx16", PrecompiledContracts.SECP256K1_ADD_ADDR_STR);
+        assertTransactionOk("tx17", PrecompiledContracts.SECP256K1_MUL_ADDR_STR);
+
         assertTransactionCount(world.getBlockByName("b01").getTransactionsList().size());
+    }
+
+    @Test
+    void testMaxInputForBuiltInPrecompiledContractsHaveCorrectValues() {
+
+        // Fixed input size contracts
+        Assertions.assertEquals(128, new PrecompiledContracts.ECRecover().getMaxInput());
+        Assertions.assertEquals(213, new PrecompiledContracts.Blake2F().getMaxInput());
+        Assertions.assertEquals(128, new Secp256k1Addition(Secp256k1.getInstance()).getMaxInput());
+        Assertions.assertEquals(96, new Secp256k1Multiplication(Secp256k1.getInstance()).getMaxInput());
+
+        // Unlimited contracts
+        Assertions.assertEquals(NO_LIMIT_ON_MAX_INPUT, new PrecompiledContracts.Identity().getMaxInput());
+        Assertions.assertEquals(NO_LIMIT_ON_MAX_INPUT, new PrecompiledContracts.Sha256().getMaxInput());
+        Assertions.assertEquals(NO_LIMIT_ON_MAX_INPUT, new PrecompiledContracts.Ripempd160().getMaxInput());
+        Assertions.assertEquals(NO_LIMIT_ON_MAX_INPUT, new PrecompiledContracts.BigIntegerModexp().getMaxInput());
+    }
+
+    @Test
+    void testMaxInputForAltBN128Contracts() {
+        // given altBN128 contracts have correct maxInput values
+        TestSystemProperties config = new TestSystemProperties();
+        PrecompiledContracts contracts = new PrecompiledContracts(config, null, null);
+
+        // when - then
+        // The actual contract execution is tested in AltBN128Test
+        Assertions.assertNotNull(contracts);
+    }
+
+    @Test
+    void testMaxInputConsistencyAcrossDifferentContracts() {
+        // given
+        PrecompiledContracts.Identity contract1 = new PrecompiledContracts.Identity();
+        PrecompiledContracts.Identity contract2 = new PrecompiledContracts.Identity();
+        // when - then
+        Assertions.assertEquals(contract1.getMaxInput(), contract2.getMaxInput());
+
+        // given
+        PrecompiledContracts.Sha256 contract3 = new PrecompiledContracts.Sha256();
+        PrecompiledContracts.Sha256 contract4 = new PrecompiledContracts.Sha256();
+        // when - then
+        Assertions.assertEquals(contract3.getMaxInput(), contract4.getMaxInput());
+
+        // given
+        PrecompiledContracts.ECRecover contract5 = new PrecompiledContracts.ECRecover();
+        PrecompiledContracts.ECRecover contract6 = new PrecompiledContracts.ECRecover();
+        // when - then
+        Assertions.assertEquals(contract5.getMaxInput(), contract6.getMaxInput());
     }
 
     /**
@@ -110,7 +172,7 @@ class PrecompiledContractsCallErrorHandlingTests {
      * should emmit one PrecompiledSuccess because the whole execution finished ok
      * */
     private void assertTransactionOk(String tx, String precompiledAddress) throws IOException {
-        assertTransaction(tx, precompiledAddress,1, 0, true);
+        assertTransaction(tx, precompiledAddress, 1, 0, true);
     }
 
     /**
@@ -128,7 +190,7 @@ class PrecompiledContractsCallErrorHandlingTests {
      * shouldn't emmit any event because it failed before and exited the whole execution
      * */
     private void assertTransactionFail(String tx, String precompiledAddress) throws IOException {
-        assertTransaction(tx, precompiledAddress,0, 0, false);
+        assertTransaction(tx, precompiledAddress, 0, 0, false);
     }
 
     private void assertTransaction(String tx, String precompiledAddress, int expectedPrecompiledSuccessEventCount,
@@ -185,7 +247,7 @@ class PrecompiledContractsCallErrorHandlingTests {
         // Events on rsk precompiled calls
         Stream<String> events = receipt.getLogInfoList().stream().map(logInfo -> eventSignature(logInfo));
         List<String> eventsSignature = events.filter(event -> isExpectedEventSignature(event, eventSignature, params))
-                .collect(Collectors.toList());
+                .toList();
 
         Assertions.assertEquals(times, eventsSignature.size());
     }
